@@ -19,7 +19,7 @@
  ***************************************************************************/
 #include "httptracker.h"
 #include <config-ktorrent.h>
- 
+
 #include <kurl.h>
 #include <klocale.h>
 #include <qhostaddress.h>
@@ -50,28 +50,28 @@ namespace bt
 	Uint16 HTTPTracker::proxy_port = 8080;
 	bool HTTPTracker::use_qhttp = false;
 
-	HTTPTracker::HTTPTracker(const KUrl & url,TrackerDataSource* tds,const PeerID & id,int tier)
-		: Tracker(url,tds,id,tier),
-		supports_partial_seed_extension(false)
+	HTTPTracker::HTTPTracker(const KUrl & url, TrackerDataSource* tds, const PeerID & id, int tier)
+			: Tracker(url, tds, id, tier),
+			supports_partial_seed_extension(false)
 	{
 		active_job = 0;
-		
+
 		interval = 5 * 60; // default interval 5 minutes
 		failures = 0;
-		connect(&timer,SIGNAL(timeout()),this,SLOT(onTimeout()));
+		connect(&timer, SIGNAL(timeout()), this, SLOT(onTimeout()));
 	}
 
 	HTTPTracker::~HTTPTracker()
 	{
 	}
-	
+
 	void HTTPTracker::start()
 	{
 		event = "started";
 		resetTrackerStats();
 		doRequest();
 	}
-	
+
 	void HTTPTracker::stop(WaitJob* wjob)
 	{
 		if (!started)
@@ -94,14 +94,14 @@ namespace bt
 			started = false;
 		}
 	}
-	
+
 	void HTTPTracker::completed()
 	{
 		event = "completed";
 		doRequest();
 		event = QString();
 	}
-	
+
 	void HTTPTracker::manualUpdate()
 	{
 		if (!started)
@@ -109,24 +109,24 @@ namespace bt
 		else
 			doRequest();
 	}
-	
+
 	void HTTPTracker::scrape()
 	{
 		if (!url.isValid())
 		{
-			Out(SYS_TRK|LOG_NOTICE) << "Invalid tracker url, canceling scrape" << endl;
+			Out(SYS_TRK | LOG_NOTICE) << "Invalid tracker url, canceling scrape" << endl;
 			return;
 		}
-		
+
 		if (!url.fileName().startsWith("announce"))
 		{
-			Out(SYS_TRK|LOG_NOTICE) << "Tracker " << url << " does not support scraping" << endl;
+			Out(SYS_TRK | LOG_NOTICE) << "Tracker " << url << " does not support scraping" << endl;
 			return;
 		}
-		
+
 		KUrl scrape_url = url;
-		scrape_url.setFileName(url.fileName().replace("announce","scrape"));
-		
+		scrape_url.setFileName(url.fileName().replace("announce", "scrape"));
+
 		QString epq = scrape_url.encodedPathAndQuery();
 		const SHA1Hash & info_hash = tds->infoHash();
 		if (scrape_url.queryItems().count() > 0)
@@ -134,41 +134,41 @@ namespace bt
 		else
 			epq += "?info_hash=" + info_hash.toURLString();
 		scrape_url.setEncodedPathAndQuery(epq);
-	
-		Out(SYS_TRK|LOG_NOTICE) << "Doing scrape request to url : " << scrape_url.prettyUrl() << endl;
+
+		Out(SYS_TRK | LOG_NOTICE) << "Doing scrape request to url : " << scrape_url.prettyUrl() << endl;
 		KIO::MetaData md;
 		setupMetaData(md);
-		
+
 		KIO::StoredTransferJob* j = KIO::storedGet(scrape_url, KIO::NoReload, KIO::HideProgressInfo);
 		// set the meta data
 		j->setMetaData(md);
 		KIO::Scheduler::scheduleJob(j);
-		
-		connect(j,SIGNAL(result(KJob*)),this,SLOT(onScrapeResult(KJob*)));
+
+		connect(j, SIGNAL(result(KJob*)), this, SLOT(onScrapeResult(KJob*)));
 	}
-	
+
 	void HTTPTracker::onScrapeResult(KJob* j)
 	{
 		if (j->error())
 		{
-			Out(SYS_TRK|LOG_IMPORTANT) << "Scrape failed : " << j->errorString() << endl;
+			Out(SYS_TRK | LOG_IMPORTANT) << "Scrape failed : " << j->errorString() << endl;
 			return;
 		}
-		
+
 		KIO::StoredTransferJob* st = (KIO::StoredTransferJob*)j;
-		BDecoder dec(st->data(),false,0);
+		BDecoder dec(st->data(), false, 0);
 		BNode* n = 0;
-		
+
 		try
 		{
 			n = dec.decode();
 		}
 		catch (bt::Error & err)
 		{
-			Out(SYS_TRK|LOG_IMPORTANT) << "Invalid scrape data " << err.toString() << endl;
+			Out(SYS_TRK | LOG_IMPORTANT) << "Invalid scrape data " << err.toString() << endl;
 			return;
 		}
-			
+
 		if (n && n->getType() == BNode::DICT)
 		{
 			BDictNode* d = (BDictNode*)n;
@@ -184,11 +184,11 @@ namespace bt
 						leechers = d->getInt("incomplete");
 						total_downloaded = d->getInt("downloaded");
 						supports_partial_seed_extension = d->getValue("downloaders") != 0;
-						Out(SYS_TRK|LOG_DEBUG) << "Scrape : leechers = " << leechers 
-							<< ", seeders = " << seeders << ", downloaded = " << total_downloaded << endl;
+						Out(SYS_TRK | LOG_DEBUG) << "Scrape : leechers = " << leechers
+						<< ", seeders = " << seeders << ", downloaded = " << total_downloaded << endl;
 					}
 					catch (...)
-					{}
+						{}
 					scrapeDone();
 					if (status == bt::TRACKER_ERROR)
 					{
@@ -198,75 +198,79 @@ namespace bt
 				}
 			}
 		}
-		
+
 		delete n;
 	}
-	
+
 	void HTTPTracker::doRequest(WaitJob* wjob)
 	{
 		KUrl u = url;
 		if (!url.isValid())
 		{
 			requestPending();
-			QTimer::singleShot(500,this,SLOT(emitInvalidURLFailure()));
+			QTimer::singleShot(500, this, SLOT(emitInvalidURLFailure()));
 			return;
 		}
 
 		Uint16 port = ServerInterface::getPort();
-		
-		u.addQueryItem("peer_id",peer_id.toString());
-		u.addQueryItem("port",QString::number(port));
-		u.addQueryItem("uploaded",QString::number(bytesUploaded()));
-		u.addQueryItem("downloaded",QString::number(bytesDownloaded()));
-		
-		if (event == "completed")
-			u.addQueryItem("left","0"); // need to send 0 when we are completed
-		else
-			u.addQueryItem("left",QString::number(tds->bytesLeft()));
-		
-		u.addQueryItem("compact","1");
-		if (event != "stopped")
-			u.addQueryItem("numwant","200");
-		else
-			u.addQueryItem("numwant","0");
-		
-		u.addQueryItem("key",QString::number(key));
-		QString cip = Tracker::getCustomIP();
-		if (!cip.isNull())
-			u.addQueryItem("ip",cip);
 
+		u.addQueryItem("peer_id", peer_id.toString());
+		u.addQueryItem("port", QString::number(port));
+		u.addQueryItem("uploaded", QString::number(bytesUploaded()));
+		u.addQueryItem("downloaded", QString::number(bytesDownloaded()));
+
+		if (event == "completed")
+			u.addQueryItem("left", "0"); // need to send 0 when we are completed
+		else
+			u.addQueryItem("left", QString::number(tds->bytesLeft()));
+
+		u.addQueryItem("compact", "1");
+		if (event != "stopped")
+			u.addQueryItem("numwant", "200");
+		else
+			u.addQueryItem("numwant", "0");
+
+		u.addQueryItem("key", QString::number(key));
+		QString cip = Tracker::getCustomIP();
+		if (cip.isNull())
+			cip = CurrentIPv6Address();
+		
+		if (!cip.isEmpty())
+			u.addQueryItem("ip", cip);
+		
 		if (event.isEmpty() && supports_partial_seed_extension && tds->isPartialSeed())
 			event = "paused";
-		
+
 		if (!event.isEmpty())
-			u.addQueryItem("event",event);
+			u.addQueryItem("event", event);
+		
 		QString epq = u.encodedPathAndQuery();
 		const SHA1Hash & info_hash = tds->infoHash();
 		epq += "&info_hash=" + info_hash.toURLString();
 
 
 		u.setEncodedPathAndQuery(epq);
-		
+
 		if (active_job)
-  		{
- 			announce_queue.append(u);
- 			Out(SYS_TRK|LOG_NOTICE) << "Announce ongoing, queueing announce" << endl;
-  		}
- 		else
- 		{
- 			doAnnounce(u);
- 			// if there is a wait job, add this job to the waitjob 
- 			if (wjob)
- 				wjob->addExitOperation(new ExitJobOperation(active_job));
- 		}
+		{
+			announce_queue.append(u);
+			Out(SYS_TRK | LOG_NOTICE) << "Announce ongoing, queueing announce" << endl;
+		}
+		else
+		{
+			doAnnounce(u);
+			// if there is a wait job, add this job to the waitjob
+			if (wjob)
+				wjob->addExitOperation(new ExitJobOperation(active_job));
+		}
 	}
 
 	bool HTTPTracker::updateData(const QByteArray & data)
 	{
 //#define DEBUG_PRINT_RESPONSE
 #ifdef DEBUG_PRINT_RESPONSE
-		Out(SYS_TRK|LOG_DEBUG) << "Data : " << endl;
-		Out(SYS_TRK|LOG_DEBUG) << QString(data) << endl;
+		Out(SYS_TRK | LOG_DEBUG) << "Data : " << endl;
+		Out(SYS_TRK | LOG_DEBUG) << QString(data) << endl;
 #endif
 		// search for dictionary, there might be random garbage infront of the data
 		int i = 0;
@@ -276,15 +280,15 @@ namespace bt
 				break;
 			i++;
 		}
-		
+
 		if (i == data.size())
 		{
 			failures++;
 			failed(i18n("Invalid response from tracker"));
 			return false;
 		}
-		
-		BDecoder dec(data,false,i);
+
+		BDecoder dec(data, false, i);
 		BNode* n = 0;
 		try
 		{
@@ -296,14 +300,14 @@ namespace bt
 			failed(i18n("Invalid data from tracker"));
 			return false;
 		}
-			
+
 		if (!n || n->getType() != BNode::DICT)
 		{
 			failures++;
 			failed(i18n("Invalid response from tracker"));
 			return false;
 		}
-			
+
 		BDictNode* dict = (BDictNode*)n;
 		if (dict->getData("failure reason"))
 		{
@@ -314,7 +318,7 @@ namespace bt
 			failed(error);
 			return false;
 		}
-		
+
 		if (dict->getData("warning message"))
 		{
 			BValueNode* vn = dict->getValue("warning message");
@@ -322,15 +326,15 @@ namespace bt
 		}
 		else
 			warning.clear();
-			
+
 		BValueNode* vn = dict->getValue("interval");
-			
+
 		// if no interval is specified, use 5 minutes
 		if (vn)
 			interval = vn->data().toInt();
 		else
 			interval = 5 * 60;
-			
+
 		vn = dict->getValue("incomplete");
 		if (vn)
 			leechers = vn->data().toInt();
@@ -338,7 +342,7 @@ namespace bt
 		vn = dict->getValue("complete");
 		if (vn)
 			seeders = vn->data().toInt();
-	
+
 		BListNode* ln = dict->getList("peers");
 		if (!ln)
 		{
@@ -347,14 +351,14 @@ namespace bt
 			if (vn && vn->data().getType() == Value::STRING)
 			{
 				QByteArray arr = vn->data().toByteArray();
-				for (int i = 0;i < arr.size();i+=6)
+				for (int i = 0;i < arr.size();i += 6)
 				{
 					Uint8 buf[6];
 					for (int j = 0;j < 6;j++)
 						buf[j] = arr[i + j];
 
-					Uint32 ip = ReadUint32(buf,0);
-					addPeer(net::Address(ip, ReadUint16(buf,4)), false);
+					Uint32 ip = ReadUint32(buf, 0);
+					addPeer(net::Address(ip, ReadUint16(buf, 4)), false);
 				}
 			}
 		}
@@ -366,52 +370,52 @@ namespace bt
 
 				if (!dict)
 					continue;
-				
+
 				BValueNode* ip_node = dict->getValue("ip");
 				BValueNode* port_node = dict->getValue("port");
 
 				if (!ip_node || !port_node)
 					continue;
-				
-				net::Address addr(ip_node->data().toString(),port_node->data().toInt());
+
+				net::Address addr(ip_node->data().toString(), port_node->data().toInt());
 				addPeer(addr, false);
 			}
 		}
-		
+
 		// Check for IPv6 compact peers
 		vn = dict->getValue("peers6");
 		if (vn && vn->data().getType() == Value::STRING)
 		{
 			QByteArray arr = vn->data().toByteArray();
-			for (int i = 0;i < arr.size();i+=18)
+			for (int i = 0;i < arr.size();i += 18)
 			{
 				Q_IPV6ADDR ip;
 				memcpy(ip.c, arr.data() + i, 16);
-				quint16 port = ReadUint16((const Uint8*)arr.data() + i,16);
-				
+				quint16 port = ReadUint16((const Uint8*)arr.data() + i, 16);
+
 				addPeer(net::Address(ip, port), false);
 			}
 		}
-		
+
 		delete n;
 		return true;
 	}
-	
+
 	void HTTPTracker::onKIOAnnounceResult(KJob* j)
 	{
 		KIOAnnounceJob* st = (KIOAnnounceJob*)j;
 		KUrl u = st->announceUrl();
-		onAnnounceResult(u,st->replyData(),j);
+		onAnnounceResult(u, st->replyData(), j);
 	}
 
 	void HTTPTracker::onQHttpAnnounceResult(KJob* j)
 	{
 		HTTPAnnounceJob* st = (HTTPAnnounceJob*)j;
 		KUrl u = st->announceUrl();
-		onAnnounceResult(u,st->replyData(),j);
+		onAnnounceResult(u, st->replyData(), j);
 	}
 
-	void HTTPTracker::onAnnounceResult(const KUrl& url,const QByteArray& data,KJob* j)
+	void HTTPTracker::onAnnounceResult(const KUrl& url, const QByteArray& data, KJob* j)
 	{
 		timer.stop();
 		active_job = 0;
@@ -421,8 +425,8 @@ namespace bt
 			error.clear();
 			if (err.isEmpty())
 				err = j->errorString();
-			
-			Out(SYS_TRK|LOG_IMPORTANT) << "Error : " << err << endl;
+
+			Out(SYS_TRK | LOG_IMPORTANT) << "Error : " << err << endl;
 			if (url.queryItem("event") != "stopped")
 			{
 				failures++;
@@ -475,13 +479,13 @@ namespace bt
 		failures++;
 		failed(i18n("Invalid tracker URL"));
 	}
-	
+
 	void HTTPTracker::setupMetaData(KIO::MetaData & md)
 	{
 		md["UserAgent"] = bt::GetVersionString();
 		md["SendLanguageSettings"] = "false";
 		md["cookies"] = "none";
-	//	md["accept"] = "text/plain";
+		//	md["accept"] = "text/plain";
 		md["accept"] = "text/html, image/gif, image/jpeg, *; q=.2, */*; q=.2";
 		if (proxy_on)
 		{
@@ -494,81 +498,81 @@ namespace bt
 				md["UseProxy"] = p;
 			else
 				md["UseProxy"] = QString();
-			
-			Out(SYS_TRK|LOG_DEBUG) << "Using proxy : " << md["UseProxy"] << endl;
+
+			Out(SYS_TRK | LOG_DEBUG) << "Using proxy : " << md["UseProxy"] << endl;
 		}
 	}
-	
+
 	void HTTPTracker::doAnnounceQueue()
 	{
 		if (announce_queue.empty())
 			return;
-		
+
 		KUrl u = announce_queue.front();
 		announce_queue.pop_front();
 		doAnnounce(u);
 	}
-	
+
 	void HTTPTracker::doAnnounce(const KUrl & u)
 	{
-		Out(SYS_TRK|LOG_NOTICE) << "Doing tracker request to url (via " << (use_qhttp ? "QHttp" : "KIO") << "): " << u.prettyUrl() << endl;
-		
+		Out(SYS_TRK | LOG_NOTICE) << "Doing tracker request to url (via " << (use_qhttp ? "QHttp" : "KIO") << "): " << u.prettyUrl() << endl;
+
 		if (!use_qhttp)
 		{
 			KIO::MetaData md;
 			setupMetaData(md);
-			KIOAnnounceJob* j = new KIOAnnounceJob(u,md);
-			connect(j,SIGNAL(result(KJob*)),this,SLOT(onKIOAnnounceResult(KJob*)));
+			KIOAnnounceJob* j = new KIOAnnounceJob(u, md);
+			connect(j, SIGNAL(result(KJob*)), this, SLOT(onKIOAnnounceResult(KJob*)));
 			active_job = j;
 		}
 		else
 		{
 			HTTPAnnounceJob* j = new HTTPAnnounceJob(u);
-			connect(j,SIGNAL(result(KJob*)),this,SLOT(onQHttpAnnounceResult(KJob*)));
+			connect(j, SIGNAL(result(KJob*)), this, SLOT(onQHttpAnnounceResult(KJob*)));
 			if (!proxy_on)
 			{
 				QString proxy = KProtocolManager::proxyForUrl(u); // Use KDE settings
 				if (!proxy.isNull() && proxy != "DIRECT")
 				{
 					KUrl proxy_url(proxy);
-					j->setProxy(proxy_url.host(),proxy_url.port() <= 0 ? 80 : proxy_url.port());
+					j->setProxy(proxy_url.host(), proxy_url.port() <= 0 ? 80 : proxy_url.port());
 				}
 			}
-			else if (!proxy.isNull()) 
+			else if (!proxy.isNull())
 			{
-				j->setProxy(proxy,proxy_port);
+				j->setProxy(proxy, proxy_port);
 			}
 			active_job = j;
 			j->start();
 		}
-		
+
 		timer.start(60*1000);
 		status = TRACKER_ANNOUNCING;
 		requestPending();
 	}
-	
-	void HTTPTracker::onTimeout() 
+
+	void HTTPTracker::onTimeout()
 	{
 		if (active_job)
 		{
-			error = i18n("Timeout contacting tracker %1",url.prettyUrl());
+			error = i18n("Timeout contacting tracker %1", url.prettyUrl());
 			active_job->kill(KJob::EmitResult);
 		}
 	}
 
-	
-	void HTTPTracker::setProxy(const QString & p,const bt::Uint16 port) 
+
+	void HTTPTracker::setProxy(const QString & p, const bt::Uint16 port)
 	{
 		proxy = p;
 		proxy_port = port;
 	}
-	
-	void HTTPTracker::setProxyEnabled(bool on) 
+
+	void HTTPTracker::setProxyEnabled(bool on)
 	{
 		proxy_on = on;
 	}
-	
-	
+
+
 	void HTTPTracker::setUseQHttp(bool on)
 	{
 		use_qhttp = on;
@@ -576,3 +580,6 @@ namespace bt
 
 }
 #include "httptracker.moc"
+
+
+
